<resources>
    <string name="app_name">Руско радио</string>
    <string name="internet_connection_error">Ошибка соединения\nпроверьте интернет соединение\nи повторите попытку позже</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="listen_to_rusko_radio">Слушайте Руско Радио</string>
    <string name="notification_message">У вас есть это приложение и там хорошая музыка</string>
    <string name="loading">Загрузка</string>
    <string name="logo">Лого</string>
    <string name="on_air">Мы всегда в эфире</string>
    <string name="globe">🌐</string>
    <string name="email">📧</string>
    <string name="share">Поделиться</string>
    <string name="send">Отправить</string>
    <string name="feedback">Отзыв или пожелание</string>
    <string name="email_intent">mailto:info@prostoradio.ru</string>
    <string name="play_radio">Включить радио</string>
    <string name="listen_to_the_song">Слушай на Руско Радио песню : %s. - https://www.ruskoradio.ru/</string>
    <string name="listen_to_the_radio_invitation">Слушайте Руско Радио https://www.ruskoradio.ru/</string>
    <string name="website">https://www.ruskoradio.ru/</string>

</resources>