<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".radioscreen.fragment.RadioFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_playback"
        app:layout_constraintEnd_toEndOf="@id/btn_playback"
        app:layout_constraintStart_toStartOf="@id/btn_playback"
        app:layout_constraintTop_toTopOf="@id/btn_playback"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progress_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <com.prosto.presentation.playback_button.PlaybackButtonView
        android:id="@+id/btn_playback"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:backgroundTint="@android:color/transparent"
        android:padding="16dp"
        app:btnColor="@android:color/black"
        app:circleStrokeWidth="6dp"
        app:innerPadding="8dp"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_playback">

        <TextView
            android:id="@+id/tv_on_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_air"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24" />

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_progress_points"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/ll_player"
        app:layout_constraintEnd_toEndOf="@id/ll_player"
        app:layout_constraintStart_toStartOf="@id/ll_player"
        app:layout_constraintTop_toTopOf="@id/ll_player"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progress_points" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/globe"
            android:textSize="@dimen/text_20" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/share"
            android:gravity="center"
            android:src="@drawable/ic_share_24" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/email"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>